src/SupportApp/main/default/objects/IT_Issue__c/IT_Issue__c.object-meta.xml
<CustomObject>
    <description>All issue related to I.T. that do not fall under System Issues</description>
    <label>IT Issue</label>
    <nameField>
        <displayFormat>IT-ISSUES-{0000}</displayFormat>
        <label>IT Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>