src/SupportApp/main/default/objects/IT_Issue__c/fields/Being_Handled_By_IT__c.field-meta.xml
<CustomField>
    <fullName>Being_Handled_By_IT__c</fullName>
    <formula>Owner:User.Department == &apos;IT&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Being Handled By IT</label>
    <type>Checkbox</type>
</CustomField>