src/SupportApp/main/default/objects/IT_Issue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Internet / Network</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Employee Onboarding</fullName>
            </value>
            <value>
                <fullName>Employee Offboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>