src/SupportApp/main/default/objects/IT_Issue__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>