src/SupportApp/main/default/objects/IT_Issue__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <formula>TEXT(FLOOR(Time_Spent_mSec__c/3600)) + &quot;h &quot; + TEXT( FLOOR(MOD(Time_Spent_mSec__c,3600)/60)) + &quot;min&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent</label>
    <type>Text</type>
</CustomField>