src/SupportApp/main/default/objects/IT_Issue__c/validationRules/Rejection_reason_is_required_when_reject.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_reason_is_required_when_reject</fullName>
    <active>true</active>
    <description>It is mandatory to a reason for rejecting an issue hence you need to supply it</description>
    <errorConditionFormula>AND( 
  ISPICKVAL(Status__c, &apos;Rejected&apos;), ISBLANK( Rejection_Reason__c )
)</errorConditionFormula>
    <errorMessage>You must supply a reason for rejecting the Issue</errorMessage>
</ValidationRule>