src/SupportApp/main/default/objects/IT_Issue__c/listViews/All_Open_IT_Issues.listView-meta.xml
<ListView>
    <fullName>All_Open_IT_Issues</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done,Rejected</value>
    </filters>
    <label>All Open IT Issues</label>
</ListView>